--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "graphaware/neo4j-php-ogm",
-    "description": "PHP Object Graph Mapper for Neo4j",
+    "description": "PHP Object Graph Mapper for Neo4j FORK",
     "license": "Apache V2",
     "keywords": [
         "neo4j",
